# minimalist-docker-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README  README.md  alembic.ini  app.py  compose.yml  pyproject.toml
app/: main.py
app/models/: __init__.py  item.py  response.py
app/repositories/: __init__.py  base_repository.py  item.py
app/routes/: item.py
core/alembic/: README.md  env.py
core/alembic/versions/: 2024_11_09_f2d2483a8d12_init_item.py  2024_11_24_611cb65f916e_update_db.py  e0ad20bde36e_init_activity.py
core/postgres/: db.py
