[tool.poetry]
name = "minimalist-fastapi"
version = "0.1.0"
description = "Minimalist FastAPI Template"
authors = ["Nicolas Trossat <nicolas@trossat.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"